# bazel-go-example

./: .gitignore  BUILD  README.md  WORKSPACE  go.mod  status.sh
cmd/: BUILD.bazel
cmd/rpc/: BUILD.bazel  rpc.go
cmd/simple/: BUILD.bazel  main.go
cmd/web/: BUILD.bazel  web.go
pb/echo/: BUILD.bazel  bar.proto  echo.proto
version/: BUILD.bazel
