load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "bazel_example/cmd",
    visibility = ["//visibility:private"],
    deps = ["//version:go_default_library"],
)

go_binary(
    name = "cmd",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
    x_defs = {"bazel_example/version.Version": "{STABLE_GIT_COMMIT}"},
)
