load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["rpc.go"],
    importpath = "bazel_example/cmd/rpc",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "rpc",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
